add remove api key command

--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
       {
         "command": "navbuddy.openFile",
         "title": "NavBuddy: Open File ( Backend Only )"
+      },
+      {
+        "command": "navbuddy.removeApiKey",
+        "title": "NavBuddy: Remove API Key"
       }
     ],
     "configuration": {
